--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-    <!-- Icons CSS -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+    rel="stylesheet">
+  <!-- Icons CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="./main.css">
@@ -33,8 +35,9 @@
       <div class="container-fluid">
 
         <!-- logo -->
-        <a class="navbar-brand" href="#" itemscope itemtype="https://schema.org/Organization"><img itemprop="logo"
+        <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img itemprop="logo"
             src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-icon">MENU</span>
@@ -43,16 +46,16 @@
         <!-- nav bar items -->
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item mx-5 rounded-5">
+            <li class="nav-item mx-5 p-2 rounded-4">
               <a class="nav-link active" aria-current="page" href="/index.html">HOME</a>
             </li>
-            <li class="nav-item mx-5 rounded-5">
+            <li class="nav-item mx-5 p-2 rounded-4">
               <a class="nav-link" href="/works.html">WORKS</a>
             </li>
-            <li class="nav-item mx-5 rounded-5">
+            <li class="nav-item mx-5 p-2 rounded-4">
               <a class="nav-link" href="/about.html">ABOUT</a>
             </li>
-            <li class="nav-item mx-5 rounded-5 bg-secondary">
+            <li class="nav-item mx-5 p-2 rounded-4 bg-secondary">
               <a class="nav-link" href="/contact.html">CONTACT</a>
             </li>
 
@@ -64,23 +67,73 @@
 
   <main>
     <!-- home section -->
-    <section class="banner" id="home">
-      <div class="container-fluid">
-        <h1>PATRICK MINH NGOC LE</h1>
-        <h3>designer | developer</h3>
-        <p>Showcasing innovative design and development expertise, bridging digital branding with creativity in the
-          modern era.</p>
-        <a class="btn btn-primary" href="#" role="button">know more</a>
+    <section class="banner p-5">
+      <div class="p-5">
+        <div class="container-fluid p-5 bg-secondary bg-opacity-75 rounded-4">
+          <div class="text-black p-5">
+            <h1>PATRICK MINH NGOC LE</h1>
+            <h3 class="my-5">designer | developer</h3>
+            <h5 class="my-5">Showcasing innovative design and development expertise, bridging digital branding with
+              creativity in the
+              modern era.</h5>
+            <a class="btn btn-outline-primary rounded-5 border-3 my-3 py-1" href="/about.html" role="button">know
+              more</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- work section -->
+    <section class="p-5">
+      <div class="container text-center">
+        <h2 class="mt-5 mb-3">project highlight</h2>
+        <div class="row g-3">
+          <div class="prj col-12 col-lg-4 bg-info rounded-4 p-4 align-content-center">
+            <h4>photography</h4>
+          </div>
+          <div class="prj col-12 col-lg-4 bg-info rounded-4 p-4 align-content-center">
+            <h4>videography</h4>
+          </div>
+          <div class="prj col-12 col-lg-4 bg-info rounded-4 p-4 align-content-center">
+            <h4>web dev</h4>
+          </div>
+        </div>
+        <a class="btn btn-outline-primary rounded-5 border-3 my-5 py-1" href="/works.html" role="button">know more</a>
       </div>
 
     </section>
-    <!-- work section -->
-
     <!-- about section -->
+    <section>
+      <h2 class="m-5">about me</h2>
+      <div class="about-me p-5">
+        <div class="p-5">
+          <div class="row p-5">
+            <div class="col-6"></div>
+            <div class="col-6 p-5 bg-secondary rounded-4">
+              <h5>
+                Passionate about leveraging technology to create impactful solutions, I bring creativity and expertise
+                to
+                every project.
+              </h5>
+              <a class="btn btn-outline-primary rounded-5 border-3 my-5 py-1" href="/contact.html" role="button">contact
+                me</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
   </main>
   <footer>
-
+    <div class="hstack">
+      <div class="p-4">
+        <h4>web designer & developer</h4>
+      </div>
+      <div class="ms-auto p-4">
+        <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img itemprop="logo"
+            src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
+      </div>
+    </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
