--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +16,8 @@
   <!-- Icons CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="./main.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
   <header>
 
     <!-- navigation bar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="menu-container">
       <div class="container-fluid">
 
         <!-- logo -->
@@ -58,7 +58,6 @@
             <li class="nav-item mx-5 p-2 rounded-4 bg-secondary">
               <a class="nav-link" href="/contact.html">CONTACT</a>
             </li>
-
           </ul>
         </div>
       </div>
@@ -67,7 +66,7 @@
 
   <main>
     <!-- home section -->
-    <section class="banner p-5">
+    <section class="banner p-5" id="divider">
       <div class="p-5">
         <div class="container-fluid p-5 bg-secondary bg-opacity-75 rounded-4">
           <div class="text-black p-5">
@@ -124,6 +123,7 @@
     </section>
 
   </main>
+
   <footer>
     <div class="hstack">
       <div class="p-4">
@@ -138,6 +138,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
   </script>
+  
 </body>
 
 </html>
