--- a/about.html
+++ b/about.html
@@ -1,92 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<!-- Google Fonts -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link
-  href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
-  rel="stylesheet">
-<!-- Icons CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-<!-- Custom CSS -->
-<link rel="stylesheet" href="./css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+        rel="stylesheet">
+    <!-- Icons CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    <!-- skip links -->
-  <ul role="list" class="skip-links">
-    <li><a href="#menu-container">Skip to main nav</a></li>
-    <li><a href="#divider">Skip to main content</a></li>
-  </ul>
-   <!-- skip links -->
-   <ul role="list" class="skip-links">
-    <li><a href="#menu-container">Skip to main nav</a></li>
-    <li><a href="#divider">Skip to main content</a></li>
-  </ul>
-
-  <header>
-
-    <!-- navigation bar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="menu-container">
-      <div class="container-fluid">
-
-        <!-- logo -->
-        <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img itemprop="logo"
-            src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
-
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-icon">MENU</span>
-        </button>
-
-        <!-- nav bar items -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item mx-5 p-2 rounded-4">
-              <a class="nav-link" href="/index.html">HOME</a>
-            </li>
-            <li class="nav-item mx-5 p-2 rounded-4">
-              <a class="nav-link" href="/works.html">WORKS</a>
-            </li>
-            <li class="nav-item mx-5 p-2 rounded-4">
-              <a class="nav-link active" aria-current="page" href="/about.html">ABOUT</a>
-            </li>
-            <li class="nav-item mx-5 p-2 rounded-4 bg-secondary">
-              <a class="nav-link" href="/contact.html">CONTACT</a>
-            </li>
-
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
-  <main>
-
-
-
     
-  </main>
+    <!-- skip links -->
+    <ul role="list" class="skip-links">
+        <li><a href="#menu-container">Skip to main nav</a></li>
+        <li><a href="#divider">Skip to main content</a></li>
+    </ul>
 
-  <footer>
-    <div class="hstack">
-      <div class="p-4">
-        <h4>web designer & developer</h4>
-      </div>
-      <div class="ms-auto p-4">
-        <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img itemprop="logo"
-            src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
-      </div>
-    </div>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-  </script>
+    <header>
+
+        <!-- navigation bar -->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" id="menu-container">
+            <div class="container-fluid">
+
+                <!-- logo -->
+                <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
+                        itemprop="logo" src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-icon">MENU</span>
+                </button>
+
+                <!-- nav bar items -->
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item mx-5 p-2 rounded-4">
+                            <a class="nav-link" href="/index.html">HOME</a>
+                        </li>
+                        <li class="nav-item mx-5 p-2 rounded-4">
+                            <a class="nav-link" href="/works.html">WORKS</a>
+                        </li>
+                        <li class="nav-item mx-5 p-2 rounded-4">
+                            <a class="nav-link active" aria-current="page" href="/about.html">ABOUT</a>
+                        </li>
+                        <li class="nav-item mx-5 p-2 rounded-4 bg-secondary">
+                            <a class="nav-link" href="/contact.html">CONTACT</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+
+        <div class="container-fluid text-center py-5" id="divider">
+            <div class="row g-5">
+                <div class="col-lg-6 col-12">
+                    <picture>
+                        <source srcset="images/profile-pic/profile-pic-479p.png,
+                images/profile-pic/profile-pic-958p.png 2x,
+                images/profile-pic/profile-pic-1437p.png 3x" media="(min-width:992px)">
+                        <source srcset="images/profile-pic/profile-pic-360p.png,
+                images/profile-pic/profile-pic-720p.png 2x,
+                images/profile-pic/profile-pic-1080p.png     3x" media="(min-width:577px)">
+                        <source srcset="images/profile-pic/profile-pic-180p.png,
+                images/profile-pic/profile-pic-360p.png 2x,
+                images/profile-pic/profile-pic-540p.png 3x" media="(max-width:576px)">
+                        <img class="rounded-4" src="/images/profile-pic/profile-pic-360p.png" alt="profile">
+                    </picture>
+                </div>
+                <div class="col-lg-6 col-12 text-lg-start p-5">
+                    <div class="px-5">
+                        <h5>I would like go on a journey to become a web developer in this digital era as the web
+                            becomes incredibly important to showcase oneself on the internet. With my playful and
+                            creative mind as well as my years of experience as a film producer, I aim to bring a fresh
+                            narrative into the digital realm. My objective is to make a distinct and unique appearance
+                            for every site that I make, merging my storytelling skills with innovative web development
+                            technology to leave a long-lasting impression.</h5>
+                        <a class="btn btn-outline-primary rounded-5 border-3 my-5 py-1" href="doc/resume.pdf" target="_blank"
+                            role="button">résumé</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </main>
+
+    <footer>
+        <div class="hstack">
+            <div class="p-4">
+                <h4>web designer & developer</h4>
+            </div>
+            <div class="ms-auto p-4">
+                <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
+                        itemprop="logo" src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
+            </div>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
 
 </body>
+
 </html>
