--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <!-- home section -->
     <section class="banner p-5" id="divider">
       <div class="p-5">
-        <div class="container-fluid p-5 bg-secondary bg-opacity-75 rounded-4">
+        <div class="pink-pad container-fluid p-5 bg-secondary rounded-4">
           <div class="text-black p-5">
             <h1>PATRICK MINH NGOC LE</h1>
             <h3 class="my-5">designer | developer</h3>
@@ -86,7 +86,7 @@
     <section class="p-5">
       <div class="container text-center">
         <h2 class="mt-5 mb-3">project highlight</h2>
-        <div class="row g-3">
+        <div class="row gap-4">
           <div class="prj col-12 col-lg-4 bg-info rounded-4 p-4 align-content-center">
             <h4>photography</h4>
           </div>
@@ -138,7 +138,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
   </script>
-  
+
 </body>
 
 </html>
