--- a/about.html
+++ b/about.html
@@ -46,16 +46,16 @@
                 <!-- nav bar items -->
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-5 p-2 rounded-4">
+                        <li class="nav-item mx-5 p-2 rounded-4 text-center">
                             <a class="nav-link" href="/index.html">HOME</a>
                         </li>
-                        <li class="nav-item mx-5 p-2 rounded-4">
+                        <li class="nav-item mx-5 p-2 rounded-4 text-center">
                             <a class="nav-link" href="/works.html">WORKS</a>
                         </li>
-                        <li class="nav-item mx-5 p-2 rounded-4">
+                        <li class="nav-item mx-5 p-2 rounded-4 text-center">
                             <a class="nav-link active" aria-current="page" href="/about.html">ABOUT</a>
                         </li>
-                        <li class="nav-item mx-5 p-2 rounded-4 bg-secondary">
+                        <li class="nav-item mx-5 p-2 rounded-4 bg-secondary text-center">
                             <a class="nav-link" href="/contact.html">CONTACT</a>
                         </li>
 
@@ -101,11 +101,11 @@
     </main>
 
     <footer>
-        <div class="hstack">
-            <div class="p-4">
+        <div class="hstack justify-content-sm-between justify-content-center">
+            <div class="p-4 d-none d-sm-block">
                 <h4>web designer & developer</h4>
             </div>
-            <div class="ms-auto p-4">
+            <div class="p-4">
                 <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
                         itemprop="logo" src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
             </div>
