--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,13 +19,14 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <!-- skip links -->
     <ul role="list" class="skip-links">
         <li><a href="#menu-container">Skip to main nav</a></li>
         <li><a href="#divider">Skip to main content</a></li>
     </ul>
-   
+
     <header>
 
         <!-- navigation bar -->
@@ -43,17 +45,17 @@
                 <!-- nav bar items -->
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-5 p-2 rounded-4">
+                        <li class="nav-item mx-5 p-2 rounded-4 text-center">
                             <a class="nav-link" href="/index.html">HOME</a>
                         </li>
-                        <li class="nav-item mx-5 p-2 rounded-4">
+                        <li class="nav-item mx-5 p-2 rounded-4 text-center">
                             <a class="nav-link" href="/works.html">WORKS</a>
                         </li>
-                        <li class="nav-item mx-5 p-2 rounded-4">
-                            <a class="nav-link active" aria-current="page" href="/about.html">ABOUT</a>
+                        <li class="nav-item mx-5 p-2 rounded-4 text-center">
+                            <a class="nav-link" href="/about.html">ABOUT</a>
                         </li>
-                        <li class="nav-item mx-5 p-2 rounded-4 bg-secondary">
-                            <a class="nav-link" href="/contact.html">CONTACT</a>
+                        <li class="nav-item mx-5 p-2 rounded-4 bg-secondary text-center">
+                            <a class="nav-link active" aria-current="page" href="/contact.html">CONTACT</a>
                         </li>
 
                     </ul>
@@ -61,24 +63,102 @@
             </div>
         </nav>
     </header>
-<main>
+    <main>
 
-</main>
+        <div class="bg-info d p-5">
 
-  <footer>
-    <div class="hstack">
-      <div class="p-4">
-        <h4>web designer & developer</h4>
-      </div>
-      <div class="ms-auto p-4">
-        <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img itemprop="logo"
-            src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
-      </div>
-    </div>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-  </script>
+            <h2 class="mb-5 text-lg-start text-center bg-lg">contact me</h2>
+            <div class="p-5">
+                <!-- call -->
+                <div
+                    class="d-flex flex-column flex-sm-row justify-content-sm-between text-center border-bottom border-2 py-3">
+                    <h4>call me</h4>
+                    <h5>343-987-1679</h5>
+                </div>
+                <!-- email -->
+                <div
+                    class="d-flex flex-column flex-sm-row justify-content-sm-between text-center border-bottom border-2 py-3">
+                    <h4>email me</h4>
+                    <h5>le000259@algonquinlive.com</h5>
+                </div>
+                <!-- message -->
+                <div class="d-flex flex-column flex-sm-row justify-content-sm-between py-3">
+                    <h4 class="text-center text-sm-start">leave a message</h4>
+                    <!-- form -->
+                    <form class="container d-grid">
+                        <div class="mb-3 row">
+                            <label for="name" class="col-3 col-form-label">
+                                <h4>name</h4>
+                            </label>
+                            <div class="col-7">
+                                <input type="text" class="form-control rounded-0" id="name">
+                            </div>
+                        </div>
+                        <div class="mb-3 row">
+                            <label for="email" class="col-3 col-form-label">
+                                <h4>email</h4>
+                            </label>
+                            <div class="col-7">
+                                <input type="text" class="form-control rounded-0" id="email">
+                            </div>
+                        </div>
+                        <div class="mb-3 row">
+                            <label for="message" class="col-3 col-form-label">
+                                <h4>message</h4>
+                            </label>
+                            <textarea type="text" class="col-7 form-control rounded-0" id="message" rows="5"></textarea>
+                        </div>
+                        <div>
+                            <button type="submit button"
+                                class="btn btn-outline-primary rounded-5 border-3 py-1 px-5 my-2" data-bs-toggle="modal"
+                                data-bs-target="#staticBackdrop">send</button>
+                        </div>
+                    </form>
+                </div>
+                <!-- static backdrop model -->
+                <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+                    tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header border-0">
+                                <h2 class="modal-title text-center" id="staticBackdropLabel">succesfull !!!</h2>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body border-0">
+                                <h5>thank you for contacting me. i will back to you in the earliest manner.
+                                    have a nice day</h5>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
+
+
+    </main>
+
+    <footer>
+        <div class="hstack justify-content-sm-between justify-content-center">
+            <div class="p-4 d-none d-sm-block">
+                <h4>web designer & developer</h4>
+            </div>
+            <div class="p-4">
+                <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
+                        itemprop="logo" src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
+            </div>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
 
 </body>
+
 </html>
