--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
         <!-- nav bar items -->
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item mx-5 p-2 rounded-4">
+            <li class="nav-item mx-5 p-2 rounded-4 text-center">
               <a class="nav-link active" aria-current="page" href="/index.html">HOME</a>
             </li>
-            <li class="nav-item mx-5 p-2 rounded-4">
+            <li class="nav-item mx-5 p-2 rounded-4 text-center">
               <a class="nav-link" href="/works.html">WORKS</a>
             </li>
-            <li class="nav-item mx-5 p-2 rounded-4">
+            <li class="nav-item mx-5 p-2 rounded-4 text-center">
               <a class="nav-link" href="/about.html">ABOUT</a>
             </li>
-            <li class="nav-item mx-5 p-2 rounded-4 bg-secondary">
+            <li class="nav-item mx-5 p-2 rounded-4 bg-secondary text-center">
               <a class="nav-link" href="/contact.html">CONTACT</a>
             </li>
           </ul>
@@ -86,7 +86,7 @@
     <section class="p-5">
       <div class="container text-center">
         <h2 class="mt-5 mb-3">project highlight</h2>
-        <div class="row gap-4">
+        <div class="row g-3">
           <div class="prj col-12 col-lg-4 bg-info rounded-4 p-4 align-content-center">
             <h4>photography</h4>
           </div>
@@ -125,16 +125,16 @@
   </main>
 
   <footer>
-    <div class="hstack">
-      <div class="p-4">
-        <h4>web designer & developer</h4>
-      </div>
-      <div class="ms-auto p-4">
-        <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img itemprop="logo"
-            src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
-      </div>
+    <div class="hstack justify-content-sm-between justify-content-center">
+        <div class="p-4 d-none d-sm-block">
+            <h4>web designer & developer</h4>
+        </div>
+        <div class="p-4">
+            <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
+                    itemprop="logo" src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
+        </div>
     </div>
-  </footer>
+</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
   </script>
