--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                 <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
                         itemprop="logo" src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                <button class="navbar-toggler border-0 bg-secondary p-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-icon">MENU</span>
                 </button>
@@ -45,16 +45,16 @@
                 <!-- nav bar items -->
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-5 p-2 rounded-4 text-center">
+                        <li class="nav-item item-1 mx-5 p-2 rounded-4 text-center">
                             <a class="nav-link" href="/index.html">HOME</a>
                         </li>
-                        <li class="nav-item mx-5 p-2 rounded-4 text-center">
+                        <li class="nav-item item-1 mx-5 p-2 rounded-4 text-center">
                             <a class="nav-link" href="/works.html">WORKS</a>
                         </li>
-                        <li class="nav-item mx-5 p-2 rounded-4 text-center">
+                        <li class="nav-item item-1 mx-5 p-2 rounded-4 text-center">
                             <a class="nav-link" href="/about.html">ABOUT</a>
                         </li>
-                        <li class="nav-item mx-5 p-2 rounded-4 bg-secondary text-center">
+                        <li class="nav-item item-2 mx-5 p-2 rounded-4 text-center">
                             <a class="nav-link active" aria-current="page" href="/contact.html">CONTACT</a>
                         </li>
 
@@ -65,80 +65,76 @@
     </header>
     <main>
 
-        <div class="bg-info d p-5">
+        <div class="bg-info py-5 px-md-5">
 
             <h2 class="mb-5 text-lg-start text-center bg-lg">contact me</h2>
-            <div class="p-5">
+            <div class="p-sm-5">
                 <!-- call -->
                 <div
                     class="d-flex flex-column flex-sm-row justify-content-sm-between text-center border-bottom border-2 py-3">
-                    <h4>call me</h4>
-                    <h5>343-987-1679</h5>
+                    <p class="h4">call me</p>
+                    <p class="h5">343-987-1679</p>
                 </div>
                 <!-- email -->
                 <div
                     class="d-flex flex-column flex-sm-row justify-content-sm-between text-center border-bottom border-2 py-3">
-                    <h4>email me</h4>
-                    <h5>le000259@algonquinlive.com</h5>
+                    <p class="h4">email me</p>
+                    <p class="h5">le000259@algonquinlive.com</p>
                 </div>
                 <!-- message -->
-                <div class="d-flex flex-column flex-sm-row justify-content-sm-between py-3">
-                    <h4 class="text-center text-sm-start">leave a message</h4>
+                <div class="d-flex flex-column flex-lg-row justify-content-sm-between py-3">
+                    <p class="h4 text-center text-sm-start">leave a message</p>
                     <!-- form -->
-                    <form class="container d-grid">
+                    <form class="container d-grid py-3 py-md-0">
                         <div class="mb-3 row">
                             <label for="name" class="col-3 col-form-label">
-                                <h4>name</h4>
+                                <p class="h4 text-end text-lg-start">name</p>
                             </label>
-                            <div class="col-7">
-                                <input type="text" class="form-control rounded-0" id="name">
+                            <div class="col-9">
+                                <input type="text" class="form-control rounded-0 w-100 h-100" id="name">
                             </div>
                         </div>
                         <div class="mb-3 row">
                             <label for="email" class="col-3 col-form-label">
-                                <h4>email</h4>
+                                <p class="h4 text-end text-lg-start">email</p>
                             </label>
-                            <div class="col-7">
-                                <input type="text" class="form-control rounded-0" id="email">
+                            <div class="col-9">
+                                <input type="text" class="form-control rounded-0 w-100 h-100" id="email">
                             </div>
                         </div>
                         <div class="mb-3 row">
                             <label for="message" class="col-3 col-form-label">
-                                <h4>message</h4>
+                                <p class="h4 text-end text-lg-start">message</p>
                             </label>
-                            <textarea type="text" class="col-7 form-control rounded-0" id="message" rows="5"></textarea>
+                            <div class="col-9">
+                                <textarea class="form-control rounded-0 w-100 " id="message" rows="12"></textarea>
+                            </div>
                         </div>
-                        <div>
-                            <button type="submit button"
-                                class="btn btn-outline-primary rounded-5 border-3 py-1 px-5 my-2" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop">send</button>
+                        <div class="d-flex justify-content-center">
+                            <button type="button" class="btn btn-outline-primary rounded-5 border-3 py-1 px-5 my-2"
+                                data-bs-toggle="modal" data-bs-target="#staticBackdrop">send</button>
                         </div>
                     </form>
                 </div>
                 <!-- static backdrop model -->
                 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
                     tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                    <div class="modal-dialog">
+                    <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
-                            <div class="modal-header border-0">
-                                <h2 class="modal-title text-center" id="staticBackdropLabel">succesfull !!!</h2>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
+                            <div class="border-0 mt-3">
+                                <p class="h2 text-center" id="staticBackdropLabel">succesfull !!!</p>
                             </div>
-                            <div class="modal-body border-0">
-                                <h5>thank you for contacting me. i will back to you in the earliest manner.
-                                    have a nice day</h5>
+                            <div class="modal-body border-0 text-center">
+                                <p class="h5">thank you for contacting me. i will back to you in the earliest manner.
+                                    have a nice day</p>
                             </div>
-                            <div class="modal-footer">
+                            <div class="modal-footer border-0 justify-content-center mb-2">
                                 <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-
-
         </div>
 
 
@@ -147,7 +143,7 @@
     <footer>
         <div class="hstack justify-content-sm-between justify-content-center">
             <div class="p-4 d-none d-sm-block">
-                <h4>web designer & developer</h4>
+                <p class="h4">web designer & developer</p>
             </div>
             <div class="p-4">
                 <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
