--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,14 +32,14 @@
   <header>
 
     <!-- navigation bar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="menu-container">
+    <nav class="navbar navbar-expand-md bg-body-tertiary" id="menu-container">
       <div class="container-fluid">
 
         <!-- logo -->
-        <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img itemprop="logo"
-            src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
+        <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
+            itemprop="logo" src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        <button class="navbar-toggler border-0 bg-secondary p-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-icon">MENU</span>
         </button>
@@ -46,16 +47,16 @@
         <!-- nav bar items -->
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item mx-5 p-2 rounded-4 text-center">
+            <li class="nav-item item-1 mx-5 p-2 rounded-4 text-center">
               <a class="nav-link active" aria-current="page" href="/index.html">HOME</a>
             </li>
-            <li class="nav-item mx-5 p-2 rounded-4 text-center">
+            <li class="nav-item item-1 mx-5 p-2 rounded-4 text-center">
               <a class="nav-link" href="/works.html">WORKS</a>
             </li>
-            <li class="nav-item mx-5 p-2 rounded-4 text-center">
+            <li class="nav-item item-1 mx-5 p-2 rounded-4 text-center">
               <a class="nav-link" href="/about.html">ABOUT</a>
             </li>
-            <li class="nav-item mx-5 p-2 rounded-4 bg-secondary text-center">
+            <li class="nav-item item-2 mx-5 p-2 rounded-4 text-center">
               <a class="nav-link" href="/contact.html">CONTACT</a>
             </li>
           </ul>
@@ -68,13 +69,13 @@
     <!-- home section -->
     <section class="banner p-5" id="divider">
       <div class="p-5">
-        <div class="pink-pad container-fluid p-5 bg-secondary rounded-4">
-          <div class="text-black p-5">
+        <div class="container-fluid p-5 bg-secondary bg-opacity-75 rounded-4">
+          <div class="p-5">
             <h1>PATRICK MINH NGOC LE</h1>
-            <h3 class="my-5">designer | developer</h3>
-            <h5 class="my-5">Showcasing innovative design and development expertise, bridging digital branding with
+            <p class="my-5 h3">designer | developer</p>
+            <p class="my-5 h5">Showcasing innovative design and development expertise, bridging digital branding with
               creativity in the
-              modern era.</h5>
+              modern era.</p>
             <a class="btn btn-outline-primary rounded-5 border-3 my-3 py-1" href="/about.html" role="button">know
               more</a>
           </div>
@@ -87,14 +88,20 @@
       <div class="container text-center">
         <h2 class="mt-5 mb-3">project highlight</h2>
         <div class="row g-3">
-          <div class="prj col-12 col-lg-4 bg-info rounded-4 p-4 align-content-center">
-            <h4>photography</h4>
+          <div class="col-12 col-lg-4 ">
+            <div class="prj p-4 bg-info rounded-4 align-content-center">
+              <p class="h4">photography</p>
+            </div>
           </div>
-          <div class="prj col-12 col-lg-4 bg-info rounded-4 p-4 align-content-center">
-            <h4>videography</h4>
+          <div class="col-12 col-lg-4 ">
+            <div class="prj p-4 bg-info rounded-4 align-content-center">
+              <p class="h4">videography</p>
+            </div>
           </div>
-          <div class="prj col-12 col-lg-4 bg-info rounded-4 p-4 align-content-center">
-            <h4>web dev</h4>
+          <div class="col-12 col-lg-4 ">
+            <div class="prj p-4 bg-info rounded-4 align-content-center">
+              <p class="h4">web dev</p>
+            </div>
           </div>
         </div>
         <a class="btn btn-outline-primary rounded-5 border-3 my-5 py-1" href="/works.html" role="button">know more</a>
@@ -109,11 +116,11 @@
           <div class="row p-5">
             <div class="col-6"></div>
             <div class="col-6 p-5 bg-secondary rounded-4">
-              <h5>
+              <p class="h5">
                 Passionate about leveraging technology to create impactful solutions, I bring creativity and expertise
                 to
                 every project.
-              </h5>
+              </p>
               <a class="btn btn-outline-primary rounded-5 border-3 my-5 py-1" href="/contact.html" role="button">contact
                 me</a>
             </div>
@@ -126,15 +133,15 @@
 
   <footer>
     <div class="hstack justify-content-sm-between justify-content-center">
-        <div class="p-4 d-none d-sm-block">
-            <h4>web designer & developer</h4>
-        </div>
-        <div class="p-4">
-            <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
-                    itemprop="logo" src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
-        </div>
+      <div class="p-4 d-none d-sm-block">
+        <p class="h4">web designer & developer</p>
+      </div>
+      <div class="p-4">
+        <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
+            itemprop="logo" src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
+      </div>
     </div>
-</footer>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
   </script>
