--- a/works.html
+++ b/works.html
@@ -37,7 +37,7 @@
                 <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
                         itemprop="logo" src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                <button class="navbar-toggler border-0 bg-secondary p-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-icon">MENU</span>
                 </button>
@@ -45,16 +45,16 @@
                 <!-- nav bar items -->
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-5 p-2 rounded-4 text-center">
+                        <li class="nav-item item-1 mx-5 p-2 rounded-4 text-center">
                             <a class="nav-link" href="/index.html">HOME</a>
                         </li>
-                        <li class="nav-item mx-5 p-2 rounded-4 text-center">
+                        <li class="nav-item item-1 mx-5 p-2 rounded-4 text-center">
                             <a class="nav-link active" aria-current="page" href="/works.html">WORKS</a>
                         </li>
-                        <li class="nav-item mx-5 p-2 rounded-4 text-center">
+                        <li class="nav-item item-1 mx-5 p-2 rounded-4 text-center">
                             <a class="nav-link" href="/about.html">ABOUT</a>
                         </li>
-                        <li class="nav-item mx-5 p-2 rounded-4 bg-secondary text-center">
+                        <li class="nav-item item-2 mx-5 p-2 rounded-4 text-center">
                             <a class="nav-link" href="/contact.html">CONTACT</a>
                         </li>
 
@@ -63,11 +63,13 @@
             </div>
         </nav>
     </header>
+<main>
 
+</main>
     <footer>
         <div class="hstack justify-content-sm-between justify-content-center">
             <div class="p-4 d-none d-sm-block">
-                <h4>web designer & developer</h4>
+                <p class="h4">web designer & developer</p>
             </div>
             <div class="p-4">
                 <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
