--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
 
         <div class="bg-info py-5 px-md-5">
 
-            <h2 class="mb-5 text-lg-start text-center bg-lg">contact me</h2>
+            <h2 class="mb-5 text-lg-start text-center">contact me</h2>
             <div class="p-sm-5">
                 <!-- call -->
                 <div
