--- a/about.html
+++ b/about.html
@@ -68,6 +68,7 @@
     <main>
 
         <div class="container-fluid text-center py-5" id="divider">
+            <h2 class="mb-5 text-center">about me</h2>
             <div class="row">
                 <div class="col-lg-6 col-12">
                     <picture>
@@ -99,7 +100,6 @@
 
             </div>
         </div>
-
     </main>
 
     <footer>
@@ -113,6 +113,7 @@
             </div>
         </div>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
