--- a/works.html
+++ b/works.html
@@ -30,15 +30,16 @@
     <header>
 
         <!-- navigation bar -->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" id="menu-container">
+        <nav class="navbar navbar-expand-md bg-body-tertiary" id="menu-container">
             <div class="container-fluid">
 
                 <!-- logo -->
                 <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
                         itemprop="logo" src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
 
-                <button class="navbar-toggler border-0 bg-secondary p-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler border-0 bg-secondary p-3" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-icon">MENU</span>
                 </button>
 
@@ -63,9 +64,145 @@
             </div>
         </nav>
     </header>
-<main>
+    <main>
 
-</main>
+
+        <h1 class="p-5 text-lg-start text-center">all projects</h2>
+            <div>
+
+                <!-- photography section -->
+                <section class="container-xl border-top border-2">
+                    <h2 class="p-5 pb-0 text-lg-start text-center">photography</h2>
+                    <div class="row g-5 p-5">
+
+                        <picture class="col-12 col-lg-6">
+                            <source srcset="images/works-pic/photo-1-684p.png,
+images/works-pic/photo-1-1368p.png 2x,
+images/works-pic/photo-1-2052p.png 3x" media="(min-width:577px)">
+                            <source srcset="images/works-pic/photo-1-270p.png,
+images/works-pic/photo-1-540p.png 2x,
+images/works-pic/photo-1-810p.png 3x" media="(max-width:576px)">
+                            <img class="rounded-4 w-100" src="images/works-pic/photo-1-540p.png"
+                                alt="photorgraphy works">
+                        </picture>
+
+                        <picture class="col-12 col-lg-6 d-none d-lg-flex">
+                            <source srcset="images/works-pic/photo-2-684p.png,
+    images/works-pic/photo-2-1368p.png 2x,
+    images/works-pic/photo-2-2052p.png 3x" media="(min-width:577px)">
+                            <source srcset="images/works-pic/photo-2-270p.png,
+    images/works-pic/photo-2-540p.png 2x,
+    images/works-pic/photo-2-810p.png 3x" media="(max-width:576px)">
+                            <img class="rounded-4 w-100" src="images/works-pic/photo-2-540p.png"
+                                alt="photorgraphy works">
+                        </picture>
+
+                    </div>
+                    <p class="p-5 py-0 h5">Photography has swiftly evolved into a profound passion, sparked by the
+                        captivating
+                        moments
+                        I've captured during my studies. While not my primary focus, delving into this art form has
+                        unveiled life's beauty and intricacies. Each click of the shutter reminds me to cherish
+                        every moment, fueling my desire to explore and refine my skills further. Immortalizing
+                        fleeting moments and preserving memories through timeless images is an adventure I eagerly
+                        embrace, aiming to evoke emotion and preserve memories for a lifetime.</p>
+                    <div class="p-5 text-center text-lg-end">
+                        <a class="btn btn-outline-primary rounded-5 border-3 py-1 d-inline-block"
+                            href="https://www.instagram.com/patrikngocfoto/" target="_blank" role="button">my insta</a>
+                    </div>
+                </section>
+
+                <!-- videography section-->
+
+                <section class="container-xl border-top border-2">
+                    <h2 class="p-5 pb-0 text-lg-start text-center">videography</h2>
+                    <div class="row g-5 p-5">
+                        <picture class="col-12 col-lg-6">
+                            <source srcset="images/works-pic/video-1-684p.png,
+images/works-pic/video-1-1368p.png 2x,
+images/works-pic/video-1-2052p.png 3x" media="(min-width:577px)">
+                            <source srcset="images/works-pic/video-1-270p.png,
+images/works-pic/video-1-540p.png 2x,
+images/works-pic/video-1-810p.png 3x" media="(max-width:576px)">
+                            <img class="rounded-4 w-100" src="images/works-pic/video-1-540p.png"
+                                alt="videography works">
+                        </picture>
+
+                        <picture class="col-12 col-lg-6 d-none d-lg-flex">
+                            <source srcset="images/works-pic/video-2-684p.png,
+images/works-pic/video-2-1368p.png 2x,
+images/works-pic/video-2-2052p.png 3x" media="(min-width:577px)">
+                            <source srcset="images/works-pic/video-2-270p.png,
+images/works-pic/video-2-540p.png 2x,
+images/works-pic/video-2-810p.png 3x" media="(max-width:576px)">
+                            <img class="rounded-4 w-100" src="images/works-pic/video-2-540p.png"
+                                alt="videography works">
+                        </picture>
+
+                    </div>
+                    <p class="p-5 py-0 h5">As a passionate videographer, I specialize in storytelling through visuals,
+                        aiming to capture not just moments but emotions that resonate deeply. My background in
+                        commercial production fuels my ability to convey messages with impact and sincerity, adding a
+                        unique layer to the total package I offer clients. By seamlessly integrating video elements into
+                        website designs, I provide a dynamic and engaging user experience that goes beyond traditional
+                        web offerings, setting your brand apart with compelling narratives and captivating visuals.</p>
+                    <div class="p-5 text-center text-lg-end">
+                        <a class="btn btn-outline-primary rounded-5 border-3 py-1 d-inline-block"
+                            href="https://vimeo.com/915279673?share=copy" target="_blank" role="button">showreels</a>
+                    </div>
+                </section>
+
+                <!-- web dev and design section-->
+
+                <section class="container-xl border-top border-2">
+                    <h2 class="p-5 pb-0 text-lg-start text-center">web development and design</h2>
+                    <div class="row g-5 p-5 pb-0">
+                        <div class="col-12 col-lg-6">
+                            <!-- first web pic -->
+                            <picture>
+                                <source srcset="images/works-pic/web-1-684p.png,
+images/works-pic/web-1-1368p.png 2x,
+images/works-pic/web-1-2052p.png 3x" media="(min-width:577px)">
+                                <source srcset="images/works-pic/web-1-270p.png,
+images/works-pic/web-1-540p.png 2x,
+images/works-pic/web-1-810p.png 3x" media="(max-width:576px)">
+                                <img class="rounded-4 w-100" src="images/works-pic/web-1-540p.png" alt="web example">
+                            </picture>
+                            <div class="p-5 pb-0 text-center">
+                                <a class="btn btn-outline-primary rounded-5 border-3 py-1 d-inline-block"
+                                    href="https://le000259.github.io/mtm6201-midterm/" target="_blank" role="button">visit
+                                    site</a>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <!-- second web pic -->
+                        <picture>
+                            <source srcset="images/works-pic/web-2-684p.png,
+images/works-pic/web-2-1368p.png 2x,
+images/works-pic/web-2-2052p.png 3x" media="(min-width:577px)">
+                            <source srcset="images/works-pic/web-2-270p.png,
+images/works-pic/web-2-540p.png 2x,
+images/works-pic/web-2-810p.png 3x" media="(max-width:576px)">
+                            <img class="rounded-4 w-100" src="images/works-pic/web-2-540p.png" alt="web example">
+                        </picture>
+                        <div class="p-5 pb-0 text-center">
+                            <a class="btn btn-outline-primary rounded-5 border-3 py-1 d-inline-block"
+                                href="https://le000259.github.io/final-project/index.html" target="_blank" role="button">visit
+                                site</a>
+                        </div>
+                    </div>
+                    </div>
+                    <p class="p-5 h5">In the realm of web development and design, I merge technical proficiency
+                        with a storytelling flair to create bespoke websites that artfully communicate the essence of
+                        each client's narrative, ensuring a memorable and impactful online presence. These examples above are purely made with HTML and CSS as part of class works.</p>
+
+                </section>
+
+            </div>
+
+
+
+    </main>
     <footer>
         <div class="hstack justify-content-sm-between justify-content-center">
             <div class="p-4 d-none d-sm-block">
