--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     <header>
 
         <!-- navigation bar -->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" id="menu-container">
+        <nav class="navbar navbar-expand-md bg-body-tertiary" id="menu-container">
             <div class="container-fluid">
 
                 <!-- logo -->
@@ -77,7 +77,7 @@
                 images/profile-pic/profile-pic-1437p.png 3x" media="(min-width:992px)">
                         <source srcset="images/profile-pic/profile-pic-360p.png,
                 images/profile-pic/profile-pic-720p.png 2x,
-                images/profile-pic/profile-pic-1080p.png     3x" media="(min-width:577px)">
+                images/profile-pic/profile-pic-1080p.png 3x" media="(min-width:577px)">
                         <source srcset="images/profile-pic/profile-pic-180p.png,
                 images/profile-pic/profile-pic-360p.png 2x,
                 images/profile-pic/profile-pic-540p.png 3x" media="(max-width:576px)">
