--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/contact-style.css">
 </head>
 
 <body>
@@ -30,7 +31,7 @@
     <header>
 
         <!-- navigation bar -->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" id="menu-container">
+        <nav class="navbar navbar-expand-md bg-body-tertiary" id="menu-container">
             <div class="container-fluid">
 
                 <!-- logo -->
@@ -65,7 +66,7 @@
     </header>
     <main>
 
-        <div class="bg-info py-5 px-md-5">
+        <div class="bg-info py-5 px-md-5" id="divider">
 
             <h2 class="mb-5 text-lg-start text-center">contact me</h2>
             <div class="p-sm-5">
