--- a/works.html
+++ b/works.html
@@ -30,7 +30,7 @@
     <header>
 
         <!-- navigation bar -->
-        <nav class="navbar navbar-expand-md bg-body-tertiary" id="menu-container">
+        <nav class="navbar navbar-expand-md bg-body-tertiary" id="menu-container" role="navigation">
             <div class="container-fluid">
 
                 <!-- logo -->
@@ -64,17 +64,14 @@
             </div>
         </nav>
     </header>
-    <main class="container-xl">
-
-
-        <h1 class="p-5 text-lg-start text-center">all projects</h2>
+    <main class="container-xl" role="main">
+        <h1 class="p-5 text-lg-start text-center" role="heading">all projects</h2>
             <div>
 
                 <!-- photography section -->
                 <section class="border-top border-2">
-                    <h2 class="p-5 pb-0 text-lg-start text-center">photography</h2>
+                    <h2 class="p-5 pb-0 text-lg-start text-center" role="heading">photography</h2>
                     <div class="row g-5 p-5">
-
                         <picture class="col-12 col-lg-6">
                             <source srcset="images/works-pic/photo-1-684p.png,
 images/works-pic/photo-1-1368p.png 2x,
@@ -115,7 +112,7 @@ images/works-pic/photo-1-810p.png 3x" media="(max-width:576px)">
                 <!-- videography section-->
 
                 <section class="border-top border-2">
-                    <h2 class="p-5 pb-0 text-lg-start text-center">videography</h2>
+                    <h2 class="p-5 pb-0 text-lg-start text-center" role="heading">videography</h2>
                     <div class="row g-5 p-5">
                         <picture class="col-12 col-lg-6">
                             <source srcset="images/works-pic/video-1-684p.png,
@@ -155,7 +152,7 @@ images/works-pic/video-2-810p.png 3x" media="(max-width:576px)">
                 <!-- web dev and design section-->
 
                 <section class="border-top border-2">
-                    <h2 class="p-5 pb-0 text-lg-start text-center">web development and design</h2>
+                    <h2 class="p-5 pb-0 text-lg-start text-center" role="heading">web development and design</h2>
                     <div class="row g-5 p-5 pb-0">
                         <div class="col-12 col-lg-6">
                             <!-- first web pic -->
@@ -200,13 +197,11 @@ images/works-pic/web-2-810p.png 3x" media="(max-width:576px)">
 
             </div>
 
-
-
     </main>
     <footer>
         <div class="hstack justify-content-sm-between justify-content-center">
             <div class="p-4 d-none d-sm-block">
-                <p class="h4">web designer & developer</p>
+                <p class="h4" role="heading">web designer & developer</p>
             </div>
             <div class="p-4">
                 <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
