--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     <header>
 
         <!-- navigation bar -->
-        <nav class="navbar navbar-expand-md bg-body-tertiary" id="menu-container">
+        <nav class="navbar navbar-expand-md bg-body-tertiary" id="menu-container" role="navigation">
             <div class="container-fluid">
 
                 <!-- logo -->
@@ -65,10 +65,10 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main role="main">
 
         <div class="container-fluid text-center py-5" id="divider">
-            <h2 class="mb-5 text-center">about me</h2>
+            <h2 class="mb-5 text-center" role="heading">about me</h2>
             <div class="row">
                 <div class="col-lg-6 col-12">
                     <picture>
@@ -105,7 +105,7 @@
     <footer>
         <div class="hstack justify-content-sm-between justify-content-center">
             <div class="p-4 d-none d-sm-block">
-                <p class="h4">web designer & developer</p>
+                <p class="h4" role="heading">web designer & developer</p>
             </div>
             <div class="p-4">
                 <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
