--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     <header>
 
         <!-- navigation bar -->
-        <nav class="navbar navbar-expand-md bg-body-tertiary" id="menu-container">
+        <nav class="navbar navbar-expand-md bg-body-tertiary" id="menu-container" role="navigation">
             <div class="container-fluid">
 
                 <!-- logo -->
@@ -64,29 +64,29 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main role="main">
 
-        <div class="bg-info py-5 px-md-5" id="divider">
+        <div class="bg-info py-5 px-md-5" id="divider" role="article">
 
-            <h2 class="mb-5 text-lg-start text-center">contact me</h2>
+            <h2 class="mb-5 text-lg-start text-center" role="heading">contact me</h2>
             <div class="p-sm-5">
                 <!-- call -->
                 <div
                     class="d-flex flex-column flex-sm-row justify-content-sm-between text-center border-bottom border-2 py-3">
-                    <p class="h4">call me</p>
+                    <p class="h4" role="heading">call me</p>
                     <p class="h5">343-987-1679</p>
                 </div>
                 <!-- email -->
                 <div
                     class="d-flex flex-column flex-sm-row justify-content-sm-between text-center border-bottom border-2 py-3">
-                    <p class="h4">email me</p>
+                    <p class="h4" role="heading">email me</p>
                     <p class="h5">le000259@algonquinlive.com</p>
                 </div>
                 <!-- message -->
                 <div class="d-flex flex-column flex-lg-row justify-content-sm-between py-3">
-                    <p class="h4 text-center text-sm-start">leave a message</p>
+                    <p class="h4 text-center text-sm-start" role="heading">leave a message</p>
                     <!-- form -->
-                    <form class="container d-grid py-3 py-md-0">
+                    <form class="container d-grid py-3 py-md-0" role="form">
                         <div class="mb-3 row">
                             <label for="name" class="col-3 col-form-label">
                                 <p class="h4 text-end text-lg-start">name</p>
@@ -123,7 +123,7 @@
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
                             <div class="border-0 mt-3">
-                                <p class="h2 text-center" id="staticBackdropLabel">succesfull !!!</p>
+                                <p class="h2 text-center" id="staticBackdropLabel" role="heading">succesfull !!!</p>
                             </div>
                             <div class="modal-body border-0 text-center">
                                 <p class="h5">thank you for contacting me. i will back to you in the earliest manner.
@@ -144,7 +144,7 @@
     <footer>
         <div class="hstack justify-content-sm-between justify-content-center">
             <div class="p-4 d-none d-sm-block">
-                <p class="h4">web designer & developer</p>
+                <p class="h4" role="heading">web designer & developer</p>
             </div>
             <div class="p-4">
                 <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
