--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <header>
 
     <!-- navigation bar -->
-    <nav class="navbar navbar-expand-md bg-body-tertiary" id="menu-container">
+    <nav class="navbar navbar-expand-md bg-body-tertiary" id="menu-container" role="navigation">
       <div class="container-fluid">
 
         <!-- logo -->
@@ -65,18 +65,18 @@
     </nav>
   </header>
 
-  <main>
+  <main role="main">
     <!-- home section -->
-    <section class="banner p-sm-5" id="divider">
+    <section class="banner p-sm-5" id="divider" role="banner">
       <div class="p-sm-5">
         <div class="p-sm-5 pink-pad bg-opacity-75 rounded-4 text-center text-lg-start">
           <div class="p-sm-5">
             <div class="pink-pad-1 p-sm-0 p-5">
-            <h1>PATRICK MINH NGOC LE</h1>
-            <p class="my-5 h3">designer | developer</p>
+            <h1 role="heading">PATRICK MINH NGOC LE</h1>
+            <p class="my-5 h3" role="heading">designer | developer</p>
           </div>
             <div class="pink-pad-2">
-            <p class="my-5 h5">Showcasing innovative design and development expertise, bridging digital branding with
+            <p class="my-5 h5" role="heading">Showcasing innovative design and development expertise, bridging digital branding with
               creativity in the
               modern era.</p>
             <a class="btn btn-outline-primary rounded-5 border-3 my-2 py-1" href="/about.html" role="button">know
@@ -114,7 +114,7 @@
     </section>
     <!-- about section -->
     <section>
-      <h2 class="p-5 pb-0 text-sm-start text-center">about me</h2>
+      <h2 class="p-5 pb-0 text-sm-start text-center" role="heading">about me</h2>
       <div class="about-me p-sm-5 py-5">
         <div class="p-sm-5">
           <div class="row p-sm-5">
@@ -140,7 +140,7 @@
   <footer>
     <div class="hstack justify-content-sm-between justify-content-center">
       <div class="p-4 d-none d-sm-block">
-        <p class="h4">web designer & developer</p>
+        <p class="h4" role="heading">web designer & developer</p>
       </div>
       <div class="p-4">
         <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
