--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
     </header>
     <main role="main">
 
-        <div class="container-fluid text-center py-5" id="divider">
+        <div class="container-fluid text-center py-5" id="divider" role="article">
             <h2 class="mb-5 text-center" role="heading">about me</h2>
             <div class="row">
                 <div class="col-lg-6 col-12">
@@ -94,7 +94,7 @@
                             for every site that I make, merging my storytelling skills with innovative web development
                             technology to leave a long-lasting impression.</p>
                         <a class="btn btn-outline-primary rounded-5 border-3 my-5 py-1 d-inline-block"
-                            href="doc/resume.pdf" target="_blank" role="button">résumé</a>
+                            href="doc/resume.pdf" target="_blank" role="button" aria-label="see my résumé">résumé</a>
                     </div>
                 </div>
 
