--- a/works.html
+++ b/works.html
@@ -69,7 +69,7 @@
             <div>
 
                 <!-- photography section -->
-                <section class="border-top border-2">
+                <section class="border-top border-2" role="article">
                     <h2 class="p-5 pb-0 text-lg-start text-center" role="heading">photography</h2>
                     <div class="row g-5 p-5">
                         <picture class="col-12 col-lg-6">
@@ -105,13 +105,13 @@ images/works-pic/photo-1-810p.png 3x" media="(max-width:576px)">
                         embrace, aiming to evoke emotion and preserve memories for a lifetime.</p>
                     <div class="p-5 text-center text-lg-end">
                         <a class="btn btn-outline-primary rounded-5 border-3 py-1 d-inline-block"
-                            href="https://www.instagram.com/patrikngocfoto/" target="_blank" role="button">my insta</a>
+                            href="https://www.instagram.com/patrikngocfoto/" target="_blank" role="button" aria-label="go to my instagram to see other photos i took">my insta</a>
                     </div>
                 </section>
 
                 <!-- videography section-->
 
-                <section class="border-top border-2">
+                <section class="border-top border-2" role="article">
                     <h2 class="p-5 pb-0 text-lg-start text-center" role="heading">videography</h2>
                     <div class="row g-5 p-5">
                         <picture class="col-12 col-lg-6">
@@ -145,13 +145,13 @@ images/works-pic/video-2-810p.png 3x" media="(max-width:576px)">
                         web offerings, setting your brand apart with compelling narratives and captivating visuals.</p>
                     <div class="p-5 text-center text-lg-end">
                         <a class="btn btn-outline-primary rounded-5 border-3 py-1 d-inline-block"
-                            href="https://vimeo.com/915279673?share=copy" target="_blank" role="button">showreels</a>
+                            href="https://vimeo.com/915279673?share=copy" target="_blank" role="button" aria-label="watch my showreel">showreels</a>
                     </div>
                 </section>
 
                 <!-- web dev and design section-->
 
-                <section class="border-top border-2">
+                <section class="border-top border-2" role="article">
                     <h2 class="p-5 pb-0 text-lg-start text-center" role="heading">web development and design</h2>
                     <div class="row g-5 p-5 pb-0">
                         <div class="col-12 col-lg-6">
@@ -167,7 +167,7 @@ images/works-pic/web-1-810p.png 3x" media="(max-width:576px)">
                             </picture>
                             <div class="p-5 pb-0 text-center">
                                 <a class="btn btn-outline-primary rounded-5 border-3 py-1 d-inline-block"
-                                    href="https://le000259.github.io/mtm6201-midterm/" target="_blank" role="button">visit
+                                    href="https://le000259.github.io/mtm6201-midterm/" target="_blank" role="button" aria-label="go to see my coded website">visit
                                     site</a>
                             </div>
                         </div>
@@ -184,7 +184,7 @@ images/works-pic/web-2-810p.png 3x" media="(max-width:576px)">
                         </picture>
                         <div class="p-5 pb-0 text-center">
                             <a class="btn btn-outline-primary rounded-5 border-3 py-1 d-inline-block"
-                                href="https://le000259.github.io/final-project/index.html" target="_blank" role="button">visit
+                                href="https://le000259.github.io/final-project/index.html" target="_blank" role="button" aria-label="go to see my coded website">visit
                                 site</a>
                         </div>
                     </div>
