--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,6 @@
         </nav>
     </header>
     <main role="main">
-
         <div class="bg-info py-5 px-md-5" id="divider" role="article">
 
             <h2 class="mb-5 text-lg-start text-center" role="heading">contact me</h2>
@@ -113,7 +112,7 @@
                         </div>
                         <div class="d-flex justify-content-center">
                             <button type="button" class="btn btn-outline-primary rounded-5 border-3 py-1 px-5 my-2"
-                                data-bs-toggle="modal" data-bs-target="#staticBackdrop">send</button>
+                                data-bs-toggle="modal" data-bs-target="#staticBackdrop" aria-label="send the message to me">send</button>
                         </div>
                     </form>
                 </div>
