--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <p class="my-5 h5" role="heading">Showcasing innovative design and development expertise, bridging digital branding with
               creativity in the
               modern era.</p>
-            <a class="btn btn-outline-primary rounded-5 border-3 my-2 py-1" href="/about.html" role="button">know
+            <a class="btn btn-outline-primary rounded-5 border-3 my-2 py-1" href="/about.html" role="button" aria-label="go to about me page">know
               more</a>
             </div>
           </div>
@@ -108,12 +108,12 @@
             </div>
           </div>
         </div>
-        <a class="btn btn-outline-primary rounded-5 border-3 my-5 py-1" href="/works.html" role="button">know more</a>
+        <a class="btn btn-outline-primary rounded-5 border-3 my-5 py-1" href="/works.html" role="button" aria-label="go to works page">know more</a>
       </div>
 
     </section>
     <!-- about section -->
-    <section>
+    <section role="article">
       <h2 class="p-5 pb-0 text-sm-start text-center" role="heading">about me</h2>
       <div class="about-me p-sm-5 py-5">
         <div class="p-sm-5">
@@ -126,7 +126,7 @@
                 every project.
               </p>
               <div class="pink-pad-2 p-sm-0 py-5">
-              <a class="btn btn-outline-primary rounded-5 border-3 my-3 py-1" href="/contact.html" role="button">contact
+              <a class="btn btn-outline-primary rounded-5 border-3 my-3 py-1" href="/contact.html" role="button" aria-label="go to contact page">contact
                 me</a>
               </div>
             </div>
