--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
                             for every site that I make, merging my storytelling skills with innovative web development
                             technology to leave a long-lasting impression.</p>
                         <a class="btn btn-outline-primary rounded-5 border-3 my-5 py-1 d-inline-block"
-                            href="doc/resume.pdf" target="_blank" role="button" aria-label="see my résumé">résumé</a>
+                            href="./doc/resume.pdf" target="_blank" role="button" aria-label="see my résumé">résumé</a>
                     </div>
                 </div>
 
