--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         <div class="p-sm-5 pink-pad bg-opacity-75 rounded-4 text-center text-lg-start">
           <div class="p-sm-5">
             <div class="pink-pad-1 p-sm-0 p-5">
-              <h1 role="heading">PATRICK MINH NGOC LE</h1>
-              <p class="my-5 h3" role="heading">designer | developer</p>
+              <h1 role="heading" class="animate__animated animate__backInRight">PATRICK MINH NGOC LE</h1>
+              <p class="my-5 h3 animate__animated animate__backInLeft" role="heading">designer | developer</p>
             </div>
             <div class="pink-pad-2">
               <p class="my-5 h5" role="heading">Showcasing innovative design and development expertise, bridging digital
@@ -98,17 +98,17 @@
         <div class="row g-3">
           <div class="col-12 col-lg-4 ">
             <div class="prj p-4 bg-info rounded-4 align-content-center">
-              <p class="h4">photography</p>
+              <p class="h4 animate__animated animate__bounceInDown">photography</p>
             </div>
           </div>
           <div class="col-12 col-lg-4 ">
             <div class="prj p-4 bg-info rounded-4 align-content-center">
-              <p class="h4">videography</p>
+              <p class="h4 animate__animated animate__bounceInDown">videography</p>
             </div>
           </div>
           <div class="col-12 col-lg-4 ">
             <div class="prj p-4 bg-info rounded-4 align-content-center">
-              <p class="h4">web dev</p>
+              <p class="h4 animate__animated animate__bounceInDown">web dev</p>
             </div>
           </div>
         </div>
