--- a/works.html
+++ b/works.html
@@ -67,7 +67,7 @@
         </nav>
     </header>
     <main class="container-xl" role="main">
-        <h1 class="p-5 text-lg-start text-center" role="heading">all projects</h2>
+        <h1 class="p-5 text-lg-start text-center animate__animated animate__backInLeft" role="heading">all projects</h2>
             <div>
 
                 <!-- photography section -->
