--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
     <main role="main">
         <div class="bg-info py-5 px-md-5" id="divider" role="article">
 
-            <h2 class="mb-5 text-lg-start text-center" role="heading">contact me</h2>
+            <h2 class="mb-5 text-lg-start text-center animate__animated animate__backInLeft" role="heading">contact me</h2>
             <div class="p-sm-5">
                 <!-- call -->
                 <div
