--- a/index.html
+++ b/index.html
@@ -98,17 +98,17 @@
         <div class="row g-3">
           <div class="col-12 col-lg-4 ">
             <div class="prj p-4 bg-info rounded-4 align-content-center">
-              <p class="h4 animate__animated animate__bounceInDown">photography</p>
+              <p class="h4 animate__animated animate__swing">photography</p>
             </div>
           </div>
           <div class="col-12 col-lg-4 ">
             <div class="prj p-4 bg-info rounded-4 align-content-center">
-              <p class="h4 animate__animated animate__bounceInDown">videography</p>
+              <p class="h4 animate__animated animate__swing">videography</p>
             </div>
           </div>
           <div class="col-12 col-lg-4 ">
             <div class="prj p-4 bg-info rounded-4 align-content-center">
-              <p class="h4 animate__animated animate__bounceInDown">web dev</p>
+              <p class="h4 animate__animated animate__swing">web dev</p>
             </div>
           </div>
         </div>
