--- a/contact.html
+++ b/contact.html
@@ -67,11 +67,12 @@
             </div>
         </nav>
     </header>
-    <main role="main">
-        <div class="bg-info py-5 px-md-5" id="divider" role="article">
 
-            <h2 class="mb-5 text-lg-start text-center animate__animated animate__backInLeft" role="heading">contact me</h2>
-            <div class="p-sm-5">
+    <main role="main">
+        <div class="py-5 px-md-5 blue-pad" id="divider" role="article">
+
+            <h2 class="pb-5 text-lg-start text-center animate__animated animate__backInLeft blue-pad-1" role="heading">contact me</h2>
+            <div class="p-sm-5 bllue-pad-2">
                 <!-- call -->
                 <div
                     class="d-flex flex-column flex-sm-row justify-content-sm-between text-center border-bottom border-2 py-3">
